--- a/bilibili-lite/src/account/base.styl
+++ b/bilibili-lite/src/account/base.styl
@@ -21,6 +21,8 @@
 .img-clip-wrap .container-bg
 .security-right
 .finish-status
+.medal-get-box
+.medal-message-box
   background-color var(--c-background) !important
 
 .security-left .security-list.on
@@ -33,9 +35,11 @@
 .coupon-content
 .finish-status .finish-box .box-content
 .pendant-vip-box .pendant-list li:hover>div
+.medal-mask
   background-color var(--c-hover) !important
 
 .border-line
+.medal-progress
   background-color var(--c-border) !important
 
 .re-exp-getexp
@@ -54,6 +58,10 @@
 .home-top-level-upgo
 .coin-text-p .coin-i
 .identify-component .identify-head:before
+.medal-progress>i
+.receive-list-page
+.receive-list-prev i
+.receive-list-next i
   background-color var(--c-accent) !important
 
 .home-top-msg-name
@@ -91,6 +99,7 @@
 
 .official-home-warapper .card-name
 .official-home-warapper .card-info
+.receive-list-page
   color var(--c-white) !important
 
 .home-top-msg-name-color
@@ -107,6 +116,8 @@ li.security-list.on span
 li.security-list:hover span
 .security-list .child-list li a.bg-blue span
 .security-list .child-list li a:hover span
+.medal-up-name .link-no-hover
+.details-up-name .link-no-hover
   color var(--c-accent) !important
 
 .index-info
@@ -153,12 +164,15 @@ li.security-list:hover span
 .title-right-link
 .finish-status .finish-box
 .finish-status .finish-box .box-title
+.medal-receive-title
   border-color var(--c-border) !important
 
 .active .tabs-normal-txt
 .tabs-nav .active
 .title-right-link:hover
 .face-nav>.active
+.tab-mk2.active
+.face-g-list .mp-block .right ul li.base.reach .round
   border-color var(--c-accent) !important
 
 .h-list-item
@@ -167,6 +181,8 @@ li.security-list:hover span
 .indentify-page
 .identify-component .identify-head
 .pendant-list li>div
+.medal-get-box
+.medal-message-box
   border 0 !important
 
 .pendant-list li:hover>div
