--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -37,9 +37,12 @@
 
 .time-line .tab-switch .tab-switch-item.on
 .time-line .tab-switch .tab-switch-item:hover
+.manga-panel .tab-switch .tab-switch-item.on
+.manga-panel .tab-switch .tab-switch-item:hover
 	color var(--c-accent) !important
 
 .time-line .tab-switch .tab-switch-item.on
+.manga-panel .tab-switch .tab-switch-item.on
 	border-color var(--c-accent) !important
 
 .first-screen
