--- a/bilibili-lite/src/public/bannerHeader.styl
+++ b/bilibili-lite/src/public/bannerHeader.styl
@@ -38,6 +38,7 @@
 .international-header .nav-search #nav_searchform
 	padding 0 60px 0 20px
 	border 0
+	height auto
 	border-radius 25px
 	background-color rgba(0, 0, 0, 0.4) !important
 	overflow hidden
@@ -109,4 +110,4 @@
 	margin-top 2px
 
 .primary-menu-itnl
-	border 0
+	border 0 !important
