--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -111,6 +111,9 @@ button
 .btn-default
 .h .h-follow
 .pendant-list li .pendant-btn
+.btn-dufault
+.container .host-list-layout .hot-list-wrap .bg-wrap .top-info-content .right-info .right-btn
+.song-playbtn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -231,6 +234,8 @@ button
 .cinema-movie-wrapper .slider-contro span
 .bcc-pagination-item
 .h .h-message
+.container .musician-recommend .recommend-item .recommend-info .listen-btn
+.follow-container .follow-right .unfollow-btn
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
