--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -111,6 +111,7 @@
 .bangumi-index-crumb ul li:hover a
 .sort-item.on span
 .filter-block .filter-item-wrapper .filter-item.on
+.bili-tab .bili-tab-item:hover
 	color var(--c-accent) !important
 
 .primary-menu.border-b
@@ -149,6 +150,15 @@
 
 .filter-body .pagelistbox
 	margin 20px 0
+
+.home-article
+.music-article .pager
+	margin 30px 0 0
+
+.bili-wrapper
+.cinema-home-wrapper
+.music-article
+	padding-bottom 40px !important
 
 .charge-header-bg
 	background-image none !important
