--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -98,7 +98,7 @@
 
 .active-main
 .topic-main
-  margin-bottom 60px !important
+  padding-bottom 60px !important
 
 .back-top
   position fixed !important
