--- a/bilibili-lite/src/v/list.styl
+++ b/bilibili-lite/src/v/list.styl
@@ -40,6 +40,12 @@
 .zr_recomd .zr_user .uin .r_info em
   line-height initial
 
+.vd-list-cnt .pagination
+  margin: 20px 0
+
+.video-list
+  padding 0
+
 .container-body .zr_recomd ul
   padding 10px
   border-radius 4px
