--- a/bilibili-lite/src/v/musicplus.styl
+++ b/bilibili-lite/src/v/musicplus.styl
@@ -1,6 +1,7 @@
 /* 音乐plus */
 .international-footer
 .home-ad
+.international-header .nav-search-box
   display none !important
 
 .main-menu .search-bar
