--- a/bilibili-lite/src/v/timeline.styl
+++ b/bilibili-lite/src/v/timeline.styl
@@ -1,5 +1,6 @@
 /* 番剧时间表 */
 .timeline-header .tl-weeks:after
+li.season-item .season-body .season-title span.follow
   display none
 
 .season-timer .current-timer:before
