--- a/bilibili-lite/src/audio/base.styl
+++ b/bilibili-lite/src/audio/base.styl
@@ -1,23 +1,47 @@
 /* 主体 */
 .contri-condition .contri-select.active::after
+.sub-nav-m .tips .t-arrow
+.container .host-list-layout .hot-list-wrap .bg-wrap .hot-list-mask
+.container .hot-list .music-menu-list .menu-type .type-triangle
   display none !important
 
 .ticket-container
 .list-info .list-li.even
+.container .song-list
+.container .host-list-layout .hot-list-wrap
+.container .musician-recommend .recommend-item
   background-color var(--c-background) !important
 
 .list-info .list-li.odd
 .song-change
+.container .song-list .song-li .song-shadow
+.container .host-list-layout .hot-list-wrap .bg-wrap
+.container .host-list-layout .hot-list-wrap .bg-wrap .top-info-content .left-img
+.audioplayer .ap-controller .ap-controller-center .ap-buffer-bar
+.audioplayer .ap-play-button svg
   background-color var(--c-hover) !important
+
+.audioplayer .ap-controller .ap-controller-center .ap-play-bar-wrap
+.audioplayer .ap-controller .ap-controller-right .ap-volume-bar-wrap
+  background-color var(--c-border) !important
 
 #app
   background-color transparent !important
+
+.audioplayer .ap-controller .ap-controller-center .ap-progress-bar
+.audioplayer .ap-controller .ap-controller-right .ap-volume-bar
+.audioplayer .ap-controller .ap-controller-right .ap-volume-thumb-dot
+  background-color var(--c-accent) !important
 
 .music-upload-wrapper .upload-music-bar-wrapper .pload-music-bar-btn .pload-music-bar-btn-text
 .compila-condition .compila-type
 .list-title
 .list-theme
 .song-change
+.creation-title
+.song-title
+.container .middle-tip
+.container .host-list-layout .hot-list-wrap .bg-wrap .top-info-content .right-info .right-title
   color var(--c-title) !important
 
 .music-upload-wrapper .upload-music-bar-wrapper .pload-music-bar-btn .pload-music-bar-btn-tips
@@ -26,16 +50,31 @@
 .contri-condition .contri-sort
 .list-share .font24
 .list-info .list-li .song-title .iconfont
+.container .song-list .song-li .content .num
   color var(--c-text) !important
+
+.container .host-list-layout .hot-list-wrap .bg-wrap .top-info-content .right-info .right-btn .iconfont
+  color var(--c-white) !important
 
 .contri-condition .contri-select.active
 .list-info .list-li .song-title .song-float:hover
+.sub-nav-m .sub-nav-item a.nav-active
+.sub-nav-m .sub-nav-item a:hover
+.container .host-list-layout .hot-list-wrap .show-more-song:hover .iconfont
+.container .host-list-layout .hot-list-wrap .show-more-song:hover
+.container .host-list-layout .hot-list-wrap .hot-song-list .song-info .song-content:hover .song-title
+.container .hot-list .music-menu-list .choose-menu
   color var(--c-accent) !important
 
 .share-board .share-btn .share-type.list-border
+.container .host-list-layout .hot-list-wrap .hot-song-list
+.container .host-list-layout .hot-list-wrap .show-more-song
+.container .musician-recommend .recommend-item
   border-color var(--c-border) !important
 
 .contri-condition .contri-select.active
+.container .song-list .song-li .song-shadow
+.container .hot-list .music-menu-list .choose-menu
   border-color var(--c-accent) !important
 
 .list-info
@@ -45,5 +84,26 @@
 .share-board .share-btn
   border 1px solid var(--c-border) !important
 
+.audioplayer .ap-button:hover svg path
+.audioplayer .ap-button:hover svg polygon
+.audioplayer .ap-play-button svg path
+.audioplayer .ap-play-button svg polygon
+  fill var(--c-accent) !important
+
+.container .song-list .song-li:nth-child(6n)
+  margin-right 0 !important
+
+.container .song-list .song-li
+  margin-right 16px !important
+
 .pager .pages .page-item button
   padding 0 10px
+
+.change-song
+  border 0 !important
+  background-color transparent !important
+  font-size 0 !important
+
+.container .song-list
+  padding 10px
+  border-radius 4px
