--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -25,6 +25,12 @@
 .divider
   background-color var(--c-border) !important
 
+.user-panel-ctnr .msg-hinter
+.user-panel-ctnr .user-panel .content-ctnr .msg-count
+.shortcuts-ctnr .shortcut-item .hinter
+.shortcuts-ctnr .shortcut-item .num-hinter
+	background-color var(--c-accent) !important
+
 .shortcuts-ctnr .shortcut-item .list-item span
   color var(--c-title) !important
 
@@ -32,6 +38,7 @@
 .live-room-app .link-navbar .shortcuts-ctnr .shortcut-item .list-item span
 .nav-ctnr .link-navbar .nav-item span
 .live-room-app .link-navbar .nav-item span
+.user-panel-ctnr .user-panel .content-ctnr .msg-count
   color var(--c-white) !important
 
 .nav-ctnr .link-navbar .nav-item:hover span
