--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -199,6 +199,7 @@ textarea
 .bili-header-m .i_menu_login
 .el-dropdown-menu
 .action-menu .menu-list
+.sub-nav-m .tips
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
