--- a/bilibili-lite/src/public/index.styl
+++ b/bilibili-lite/src/public/index.styl
@@ -20,9 +20,11 @@ url-prefix("https://www.bilibili.com/cinema/"),
 url-prefix("https://www.bilibili.com/documentary/"),
 url-prefix("https://www.bilibili.com/movie/"),
 url-prefix("https://www.bilibili.com/tv/"),
+url-prefix("https://www.bilibili.com/audio/home"),
 url-prefix("https://www.bilibili.com/account/history"),
 url-prefix("https://www.bilibili.com/watchlater"),
-url-prefix("https://www.bilibili.com/ranking/") {
+url-prefix("https://www.bilibili.com/ranking/"),
+url-prefix("https://www.bilibili.com/list/recommend/") {
   /* 与主页相同的 banner */
   @import 'bannerHeader'
 }
