--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -53,11 +53,14 @@
 .sub-tab-box .item.active
 .draw-full-cntr .function-bar
 .pay-note-panel
+.gift-item.buy.hover
+.gift-item.buy:hover
 	background-color var(--c-hover) !important
 
 .bili-share-pc .weixin-hover .qr-before
 .live-record-card-cntr
 .week-rank-iframe
+.score-box .pk-main
 	background-color transparent !important
 
 .draw-full-cntr .function-bar.draw
@@ -101,6 +104,9 @@
 .mailbox-cntr header
 .tabs .item.active span
 .tabs .item:hover span
+.start-part .count-down
+.chaos-pk-result-ctnr .result-panel .result-tab div.active
+.common-popup-wrap .box header
 	color var(--c-accent) !important
 
 .room-introduction-tags
@@ -109,10 +115,12 @@
 .tabs .tab-list .item
 .edit-button
 .bili-share-pc
+.result-anchor-box
 	border-color var(--c-border) !important
 
 .recharge-store-box ul.select-list .item.active
 .award-list-cntr .award-list-cntr .award-list .award-item img
+.chaos-pk-result-ctnr .result-panel .result-tab div.active
 	border-color var(--c-accent) !important
 
 .content-wrapper
