--- a/bilibili-lite/src/ranking/base.styl
+++ b/bilibili-lite/src/ranking/base.styl
@@ -21,6 +21,7 @@
 .rank-item .content .info .pts div
 .rank-item .content .info:hover .title
 .other strong
+.rank-main-container a:hover
   color var(--c-accent) !important
 
 .rank-item
@@ -29,6 +30,9 @@
 
 .rank-menu li.active
   border-color var(--c-accent) !important
+
+.rank-item:last-child
+  border 0
 
 .rank-item:hover
   box-shadow none
@@ -39,3 +43,7 @@
 .rank-list-wrap .rank-list
   border-radius 4px
   background-color var(--c-background)
+
+.main-inner .rank-container
+  margin-bottom 0
+  padding-bottom 40px
